--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>template</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -32,6 +32,51 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<!--<dependency>-->
+		<!--	<groupId>org.slf4j</groupId>-->
+		<!--	<artifactId>slf4j-api</artifactId>-->
+		<!--	<version>2.0.7</version>-->
+		<!--</dependency>-->
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.36</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+		<!--<dependency>-->
+		<!--	<groupId>org.slf4j</groupId>-->
+		<!--	<artifactId>slf4j-simple</artifactId>-->
+		<!--	<version>2.0.7</version>-->
+		<!--	<scope>test</scope>-->
+		<!--</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<!--<version>1.4.7</version>-->
+			<version>1.2.12</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.12</version>
+			<!--<scope>test</scope>-->
+		</dependency>
+		<!--&lt;!&ndash; https://mvnrepository.com/artifact/ch.qos.logback/logback-access &ndash;&gt;-->
+		<!--<dependency>-->
+		<!--	<groupId>ch.qos.logback</groupId>-->
+		<!--	<artifactId>logback-access</artifactId>-->
+		<!--	<version>1.4.7</version>-->
+		<!--</dependency>-->
+
+
+
 	</dependencies>
 
 	<build>
