测试SpringBoot中的AOP写法

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -74,6 +81,24 @@
 		<!--	<artifactId>logback-access</artifactId>-->
 		<!--	<version>1.4.7</version>-->
 		<!--</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<!--<dependency>-->
+		<!--	<groupId>org.aspectj</groupId>-->
+		<!--	<artifactId>aspectjweaver</artifactId>-->
+		<!--	<version>1.9.19</version>-->
+		<!--	<scope>runtime</scope>-->
+		<!--</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 
 
 
