测试continue的功能

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,21 @@
 			<version>5.8.20</version>
 		</dependency>
 
+		<!-- Maven 依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
+
 
 
 
